# APPAGATO

./: Appagato.cpp  CMakeLists.txt  README.md  README.txt  config.h
Converter/: Converter.cpp
Documentation/Reports/: Clang-staticAnalyzer.txt  Cloc_v1.64.txt  Lyzard_v1.93.txt  Memcheck_v7.5.txt  Valgrind_v3.11.0.txt
Example_PPI/: Homo_sapiens_43.gfu  Homo_sapiens_43_128V.gfu  Homo_sapiens_43_16V.gfu  Homo_sapiens_43_256V.gfu  Homo_sapiens_43_32V.gfu  Homo_sapiens_43_64V.gfu
XLib/: CMakeLists.txt
XLib/Graph/Host/OLD/: GraphSTDC.hpp  GraphSTDC_Read.cpp  graphSTD.cpp  readGraphMPG.cpp
XLib/Graph/Host/include/: GraphNamespace.hpp
XLib/PowerMon/: powermon.cpp  powermon.hpp
include/: types.hpp
include/Device/: approx_subgraph_iso.cuh  devUtil.cuh
include/Host/: GraphAPP.hpp  GraphAPP.i.hpp  approx_subgraph_iso.hpp  approx_subgraph_iso.i.hpp  extend.i.hpp  seed.i.hpp  similarity.i.hpp
src/Device/: approx_subgraph_iso.cu  extend.cu  seed.cu  similarity.cu
src/Device/Kernels/: BFSSimilarityQueryKernel.cu  BFSSimilarityTargetKernel.cu  ExtendKernel.cu  ExtendKernelSupport.cu  SeedKernel.cu
src/Host/: GraphAPP.cpp  approx_subgraph_iso.cpp  extend.cpp  seed.cpp  similarity.cpp
